(lang dune 3.17)

(name ray_tracing_in_one_weekend_ocaml)

(generate_opam_files true)

(package
 (name ray_tracing_in_one_weekend_ocaml)
 (depends ocaml (core (>= v0.17.0)) (core_unix (>= v0.17.0))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
